# LLM-RAG-Platform

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
app/: config.py  db.py  exceptions.py  logging_config.py  main.py  models.py  repositories.py  schemas.py  security.py  vectorstore.py
app/api/: deps.py  router.py  routes_auth.py  routes_chat.py  routes_documents.py  routes_health.py
app/services/: auth.py  embedding.py  ingestion.py  llm.py  rag.py
app/static/: index.html
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  poddisruptionbudget.yaml  secret.yaml.example  service.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
migrations/: env.py
migrations/versions/: 28b2966490bd_initial_schema.py  40ad3ee983aa_rich_source_citations.py
tests/: conftest.py
tests/integration/: test_auth_api.py  test_health_api.py
tests/unit/: test_ingestion.py  test_security.py
